--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven{url"https://maven.google.com"}
         jcenter()
+        maven{url 'https://jitpack.io'}
     }
 }
 
