--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile project(':ParticleView')
     compile project(':itemtouchhelperextension')
+    compile files('libs/umeng-analytics-7.5.3.jar')
+    compile files('libs/umeng-common-1.5.3.jar')
 }
